# virtualbmc-for-vsphere

./: .gitignore  CHANGELOG.md  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ghcr.yml  publish.yml  pypi.yml  pypi_ghcr.yml
docker/: Dockerfile  README.md  docker-compose.yml
vbmc4vsphere/: __init__.py  config.py  control.py  exception.py  log.py  manager.py  utils.py  vbmc.py
vbmc4vsphere/cmd/: vbmc.py  vbmcd.py  vsbmc.py  vsbmcd.py
