[metadata]
name = vbmc4vsphere
summary = Create virtual BMCs for controlling virtual instances via IPMI for vSphere environment
long_description = file: README.md
long_description_content_type = text/markdown
author = kurokobo
author-email = 2920259+kurokobo@users.noreply.github.com
home-page = https://github.com/kurokobo/virtualbmc-for-vsphere
python-requires = >=3.6
classifier =
    Environment :: Other Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    vbmc4vsphere

[entry_points]
console_scripts =
    vsbmc = vbmc4vsphere.cmd.vsbmc:main
    vsbmcd = vbmc4vsphere.cmd.vsbmcd:main

vbmc4vsphere =
    add = vbmc4vsphere.cmd.vsbmc:AddCommand
    delete = vbmc4vsphere.cmd.vsbmc:DeleteCommand
    start = vbmc4vsphere.cmd.vsbmc:StartCommand
    stop = vbmc4vsphere.cmd.vsbmc:StopCommand
    list = vbmc4vsphere.cmd.vsbmc:ListCommand
    show = vbmc4vsphere.cmd.vsbmc:ShowCommand
